@@ -1,3 +1,9 @@
+2007-04-10  Elijah Newren  <newren gmail com>
+
+	* jhbuild/modtypes/tarball.py: Fix a case missed in bug 417341;
+	remove '-- ' from autogenargs for tarball modules (workaround
+	gstreamer weirdness)
+
 2007-04-09  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-2.18.modules: Use 2.18 branch for vino.
